--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('img/concrete_wall.png');
+    background-image: url('../img/concrete_wall.png');
     font-family: 'Merriweather', sans-serif;
 }
 
